# cppturbomodule

./: App.tsx  README.md  app.json  package.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/cppturbomodule/: MainActivity.kt  MainApplication.kt
android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp
android/app/src/main/res/values/: strings.xml
common-cpp/: CMakeLists.txt  CommonCppPackage.podspec  Module.cpp  Module.h  package.json
common-cpp/sharedlogic/: Address.cpp  Address.h  Sdk.cpp  Sdk.h  User.cpp  User.h
cpp-turbomodule/: MyCppTurboPackage.podspec  package.json
cpp-turbomodule/android/: build.gradle
cpp-turbomodule/android/src/main/java/com/mycppturbopackage/: MyCppTurboPackage.kt
cpp-turbomodule/android/src/main/jni/: CMakeLists.txt
cpp-turbomodule/cpp/: NativeMyCppModuleAdapter.cpp  NativeMyCppModuleAdapter.h  NativeMyCppModuleBindings.h
cpp-turbomodule/src/: NativeMyCppModule.ts  index.ts
ios/: Podfile
ios/cppturbomodule/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/cppturbomodule.xcodeproj/: project.pbxproj
ios/cppturbomodule.xcodeproj/xcshareddata/xcschemes/: cppturbomodule.xcscheme
ios/cppturbomodule.xcworkspace/: contents.xcworkspacedata
ios/cppturbomoduleTests/: cppturbomoduleTests.m
